@@ -26,6 +26,7 @@
 
 #include "amanda.h"
 #include "glib-util.h"
+#include "conffile.h" /* For multiplier strings. */
 
 typedef enum {
     FLAG_STRING_NAME,
@@ -145,16 +146,68 @@ static gboolean g_value_set_boolean_from_string(GValue * val, char * string) {
     return TRUE;
 }
 
+/* Looks for a unit value like b, byte, bytes, bps, etc. Technically
+   the return value should never be < 1, but we return a signed value
+   to help mitigate bad C promotion semantics. Returns 0 on error. */
+static gint64 find_multiplier(char * casestr) {
+    keytab_t * table_entry;
+    char * str = g_utf8_strup(casestr, -1);
+    g_strstrip(str);
+
+    if (*str == '\0') {
+        g_free(str);
+        return 1;
+    }
+    
+    for (table_entry = numb_keytable; table_entry->keyword != NULL;
+         table_entry ++) {
+        if (strcmp(casestr, table_entry->keyword) == 0) {
+            g_free(str);
+            switch (table_entry->token) {
+            case CONF_MULT1K:
+                return 1024;
+            case CONF_MULT1M:
+                return 1024*1024;
+            case CONF_MULT1G:
+                return 1024*1024*1024;
+            case CONF_MULT7:
+                return 7;
+            case CONF_AMINFINITY:
+                return G_MAXINT64;
+            case CONF_MULT1:
+            case CONF_IDENT:
+                return 1;
+            default:
+                /* Should not happen. */
+                return 0;
+            }
+        }
+    }
+
+    /* None found; this is an error. */
+    g_free(str);
+    return 0;
+}
+
 static gboolean g_value_set_int_from_string(GValue * val, char * string) {
     long int strto_result;
     char * strto_end;
+    gint64 multiplier;
     strto_result = strtol(string, &strto_end, 0);
-    if (*strto_end != '\0' || *string == '\0'
-        || strto_result < INT_MIN
-        || strto_result > INT_MAX) {
+    multiplier = find_multiplier(strto_end);
+    if (multiplier == G_MAXINT64) {
+        if (strto_result >= 0) {
+            g_value_set_int(val, G_MAXINT);
+        } else {
+            g_value_set_int(val, G_MININT);
+        }
+        return TRUE;
+    } else if (*string == '\0' || multiplier == 0
+               || strto_result < G_MININT / multiplier
+               || strto_result > G_MAXINT / multiplier) {
         return FALSE;
     } else { 
-        g_value_set_int(val, (int)strto_result);
+        g_value_set_int(val, (int)(strto_result * multiplier));
         return TRUE;
     }
 }
@@ -162,11 +215,17 @@ static gboolean g_value_set_int_from_string(GValue * val, char * string) {
 static gboolean g_value_set_uint_from_string(GValue * val, char * string) {
     unsigned long int strto_result;
     char * strto_end;
+    guint64 multiplier;
     strto_result = strtoul(string, &strto_end, 0);
-    if (*strto_end != '\0' || *string == '\0' || strto_result > G_MAXUINT) {
+    multiplier = find_multiplier(strto_end); /* casts */
+    if (multiplier == G_MAXINT64) {
+        g_value_set_uint(val, G_MAXUINT);
+        return TRUE;
+    } else if (multiplier == 0 || *string == '\0' ||
+               strto_result > G_MAXUINT / multiplier) {
         return FALSE;
     } else {
-        g_value_set_uint(val, (guint)strto_result);
+        g_value_set_uint(val, (guint)(strto_result * multiplier));
         return TRUE;
     }
 }
@@ -174,11 +233,17 @@ static gboolean g_value_set_uint_from_string(GValue * val, char * string) {
 static gboolean g_value_set_uint64_from_string(GValue * val, char * string) {
     unsigned long long int strto_result;
     char * strto_end;
+    guint64 multiplier;
     strto_result = strtoull(string, &strto_end, 0);
-    if (*strto_end != '\0' || *string == '\0' || strto_result > G_MAXUINT64) {
+    multiplier = find_multiplier(strto_end); /* casts */
+    if (multiplier == G_MAXINT64) {
+        g_value_set_uint64(val, G_MAXUINT64);
+        return TRUE;
+    } else if (multiplier == 0 || *string == '\0' ||
+        strto_result > G_MAXUINT64 / multiplier) {
         return FALSE;
     } else {
-        g_value_set_uint(val, (guint)strto_result);
+        g_value_set_uint64(val, (guint64)(strto_result * multiplier));
         return TRUE;
     }
 }
